Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53846

Slider is not set if only clicked

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.7.1
    • 5.7.0 Beta
    • Quick: Controls 2
    • None
    • b17cf27b1afd5045aa6bce923f9eebc439d4fc39

    Description

      In the current implementation, a slider is not set to a position if it is only clicked. However, on Android native toolkit and in common expectation of users, clicking (but not dragging) somewhere in a slider should set the slider to that value.

      This behaviour is easy to correct, in `QQuickSlider::mouseReleaseEvent(...)` in qquickslider.cpp, the test `if (keepMouseGrab())` at line 519 should be removed.

      Without changing qquickslider.cpp, the current behaviour is not easy to correct, especially because the C++ API of Qt Quick Controls 2 is marked as private, so sub-classing the control is not future-proof.

      While this issue could be considered a wish, I believe it is an important enough unexpected behaviour of UI to classify as a bug.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            stephane.magnenat Stéphane Magnenat
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes