Fix Slider to react if only clicked

The idea was to avoid accidental value changes while flicking over
a slider, but that case should be covered well enough by handling
mouseUngrabEvent().

[ChgangeLog][Important Behavior Changes] Slider has been fixed to
react to clicks.

Task-number: QTBUG-53846
Change-Id: I0d52f805af8867655945c57ad77ccb85704a4462
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>